<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/calmWhite"
    android:layout_marginVertical="2dp"
    android:layout_marginHorizontal="14dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="2dp"
    app:cardElevation="0dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/event_image"
            android:layout_weight="1.8"
            android:src="@drawable/ic_placeholder"
            android:background="@color/battleShipGrey"
            android:layout_width="match_parent"
            android:layout_height="140dp" />

        <LinearLayout
            android:paddingLeft="14dp"
            android:layout_weight="1.19"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:textSize="12dp"
                android:paddingVertical="2dp"
                android:paddingHorizontal="8dp"
                android:textColor="@color/calmWhite"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="0dp"
                android:layout_gravity="end"
                android:background="@color/watermelon"
                android:text="@string/done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:textColor="@color/steelGrey"
                android:layout_marginBottom="12dp"
                android:textStyle="bold"
                android:textSize="18dp"
                android:text="@string/eventname"
                android:id="@+id/event_name"
                android:singleLine="true"
                android:lines="1"
                android:scrollHorizontally="true"
                android:ellipsize="end"
                android:paddingEnd="14dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:textColor="@color/watermelon"
                android:textSize="12dp"
                android:text="@string/event_time"
                android:id="@+id/event_date"
                android:singleLine="true"
                android:lines="1"
                android:scrollHorizontally="true"
                android:ellipsize="end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:maxLines="1"
                android:ellipsize="end"
                android:layout_marginBottom="4dp"
                android:textColor="@color/steelGrey"
                android:textSize="12dp"
                android:text="@string/address"
                android:id="@+id/event_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:textColor="@color/battleShipGrey"
                android:textStyle="italic"
                android:paddingHorizontal="14dp"
                android:gravity="end|center"
                android:text="Tap untuk detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>